@@ -5,84 +5,48 @@ SITENAME=$1.$2.cloudapp.azure.com
 INSTALLDIR=/opt/shibboleth-idp
 
 apt-get -y update
-
-echo "==============>Printing values of all variables"
-echo "domain"
-echo $domain
-echo "location"
-echo $location
-echo "Sitename"
-echo $SITENAME
-
-
-#install Oracle JDK 7
-echo debconf shared/accepted-oracle-license-v1-1 select true | \
-sudo debconf-set-selections
-  
-echo debconf shared/accepted-oracle-license-v1-1 seen true | \
-sudo debconf-set-selections
-
-echo "==============>Installing JDK 7"
-
-apt-get -y install python-software-properties
-add-apt-repository -y ppa:webupd8team/java
-apt-get -y update
-apt-get -y install oracle-java7-installer
-
-
-#install Tomcat 7
-
-echo "==============>Installing Tomcat7"
-
-apt-get -y install tomcat7
-export JAVA_HOME=/usr/lib/jvm/java-7-oracle
-export PATH=$PATH:$JAVA_HOME/bin
-export JRE_HOME=/usr/lib/jvm/java-7-oracle/jre
-export JAVA_OPTS="-XX:+AggressiveOpts -Xms256m -Xmx512m -XX:MaxPermSize=256m -XX:+DisableExplicitGC"
-
-sed -i 's/#AUTHBIND=no/AUTHBIND=yes/g' /etc/default/tomcat7
-
-#generating the self signed SSL certificate for tomcat7
-
-echo "==============>Configuring SSL for Tomcat7"
-
-mkdir /usr/share/tomcat7/keystore
-cd $JAVA_HOME/bin
+apt-get -y upgrade
+apt-get -y install unzip
+apt-get -y install tomcat8
 
 SSLKEYPASSWORD=$(openssl rand -base64 12)
 
-keytool -genkey -alias tomcat -keyalg RSA -keystore /usr/share/tomcat7/keystore/server.keystore -keysize 2048 -storepass $SSLKEYPASSWORD -keypass $SSLKEYPASSWORD -dname "cn=$SITENAME, ou=shibbolethOU, o=shibbolethO, c=US"
-sed -i -e 's,redirectPort="8443",redirectPort="8443" address="0.0.0.0",g' /var/lib/tomcat7/conf/server.xml
-sed -i '/redirectPort="8443"/a  <Connector port="8443" protocol="HTTP/1.1" SSLEnabled="true" maxThreads="150" scheme="https" secure="true"  clientAuth="false" sslProtocol="TLS" address="0.0.0.0" keystoreFile="/\usr/\share\/tomcat7/\keystore/\server.keystore" keystorePass="'$SSLKEYPASSWORD'"/>' /var/lib/tomcat7/conf/server.xml
+mkdir /usr/share/tomcat8/keystore
+keytool -genkey -alias tomcat -keyalg RSA -keystore /usr/share/tomcat8/keystore/server.keystore -keysize 2048 -storepass $SSLKEYPASSWORD -keypass $SSLKEYPASSWORD -dname "cn=testname, ou=shibbolethOU, o=shibbolethO, c=US"
+sed -i '/redirectPort="8443"/a  <Connector port="8443"  protocol="org.apache.coyote.http11.Http11NioProtocol" SSLEnabled="true" maxThreads="150" scheme="https" secure="true"  clientAuth="false" sslProtocol="TLS" address="0.0.0.0" keystoreFile="/\usr/\share\/tomcat8/\keystore/\server.keystore" keystorePass="'$SSLKEYPASSWORD'"/>' /var/lib/tomcat8/conf/server.xml
+
+export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64
+echo JAVA_HOME='"'$JAVA_HOME'"' >> /etc/environment
+source /etc/environment
+
+echo export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64 >> /etc/profile
+echo export CATALINA_HOME=/var/lib/tomcat8 >> /etc/profile
+source /etc/profile
 
 
-#download jstl as it is not distributed with tomcat7 and is required by Shibboleth
+sed -i 's,</tomcat-users>,  <role rolename="manager-gui"/>\n  <user username="admin" password="secret" roles="manager-gui"/>  \n</tomcat-users>,g'   /var/lib/tomcat8/conf/tomcat-users.xml
 
-echo "==============>Adding JSTL to Tomcat7"
+#Change 128m to 512m
+sed -i 's/128m/512m/g'  /etc/default/tomcat8
 
-cd /usr/share/tomcat7/lib
-wget http://central.maven.org/maven2/jstl/jstl/1.2/jstl-1.2.jar
-chmod 777 jstl-1.2.jar
+touch /etc/authbind/byport/8443
+chmod 0755 /etc/authbind/byport/8443
+chown tomcat8:tomcat8 /etc/authbind/byport/8443
 
-#START Shibboleth installation
 
-echo "==============> Start Shibboleth installation"
-echo "==============> Download Shibboleth"
+SCOPE=$(hostname -f)
+
+cd /usr/share
 
 # install Shibboleth
-wget http://shibboleth.net/downloads/identity-provider/3.2.0/shibboleth-identity-provider-3.2.0.zip -O shibboleth.zip
-jar -xf shibboleth.zip
+wget http://shibboleth.net/downloads/identity-provider/3.3.2/shibboleth-identity-provider-3.3.2.zip -O shibboleth.zip
+unzip shibboleth.zip
 
-cd shibboleth-identity-provider-3.2.0
+cd shibboleth-identity-provider-3.3.2
 chmod -R +x bin
 
-# generate a password for client-side encryption
 echo "idp.sealer.password = $(openssl rand -base64 12)" >credentials.properties
 chmod 0600 credentials.properties
-
-# preconfigure settings for a typical deployment
-
-echo "==============> Generate preconfig file"
 
 cat >temp.properties <<EOF
 idp.additionalProperties= /conf/ldap.properties, /conf/saml-nameid.properties, /conf/services.properties, /conf/credentials.properties
@@ -92,12 +56,12 @@ idp.signing.key= %{idp.home}/credentials/idp.key
 idp.signing.cert= %{idp.home}/credentials/idp.crt
 idp.encryption.key= %{idp.home}/credentials/idp.key
 idp.encryption.cert= %{idp.home}/credentials/idp.crt
-idp.entityID= https://$SITENAME/idp/shibboleth
-idp.scope= $SITENAME
+idp.entityID= https://$SITENAME:8443/idp/shibboleth
+idp.scope= $SCOPE
 idp.consent.StorageService= shibboleth.JPAStorageService
 idp.consent.userStorageKey= shibboleth.consent.AttributeConsentStorageKey
 idp.consent.userStorageKeyAttribute= %{idp.persistentId.sourceAttribute}
-idp.consent.allowGlobal= false
+idp.consent.allowGlobal= true
 idp.consent.compareValues= true
 idp.consent.maxStoredRecords= -1
 idp.ui.fallbackLanguages= en,de,fr
@@ -119,33 +83,37 @@ bash bin/install.sh \
 -Didp.host.name=$SITENAME \
 -Didp.scope=$SITENAME
 
-chown -R tomcat7 /opt/shibboleth-idp/
+chown -R tomcat8 /opt/shibboleth-idp
 
-#edit all location's port 8443 /opt/shibboleth-idp/metadata/idp.metadata
-echo "==============> Updating the urls in metadata.xml"
+cd /opt/shibboleth-idp/edit-webapp/WEB-INF/lib
+
+echo "==============>Adding JSTL to Tomcat8"
+
+wget https://build.shibboleth.net/nexus/service/local/repositories/thirdparty/content/javax/servlet/jstl/1.2/jstl-1.2.jar
+chmod 777 jstl-1.2.jar
+chown tomcat8 jstl-1.2.jar
 
 sed -i -e 's,https://'"$SITENAME"'/idp/profile/Shibboleth/SSO,https://'"$SITENAME"':8443/idp/profile/Shibboleth/SSO,g' /opt/shibboleth-idp/metadata/idp-metadata.xml
 sed -i -e 's,https://'"$SITENAME"'/idp/profile/SAML2/POST/SSO,https://'"$SITENAME"':8443/idp/profile/SAML2/POST/SSO,g' /opt/shibboleth-idp/metadata/idp-metadata.xml
 sed -i -e 's,https://'"$SITENAME"'/idp/profile/SAML2/POST-SimpleSign/SSO,https://'"$SITENAME"':8443/idp/profile/SAML2/POST-SimpleSign/SSO,g' /opt/shibboleth-idp/metadata/idp-metadata.xml
 sed -i -e 's,https://'"$SITENAME"'/idp/profile/SAML2/Redirect/SSO,https://'"$SITENAME"':8443/idp/profile/SAML2/Redirect/SSO,g' /opt/shibboleth-idp/metadata/idp-metadata.xml
 
-# Use context deployment fragment for deploying idp.war file
-echo "==============> Adding application to tomcat7"
+echo "<Context docBase=\"/opt/shibboleth-idp/war/idp.war\" privileged=\"true\" antiResourceLocking=\"false\" antijarLocking=\"false\" unpackWar=\"false\" swallowOutput=\"true\" />" > /var/lib/tomcat8/conf/Catalina/localhost/idp.xml
 
-echo "<Context docBase=\"/opt/shibboleth-idp/war/idp.war\" privileged=\"true\" antiresourcelocking=\"false\" antijarlocking=\"false\" unpackwar=\"false\" swallowoutput=\"true\" />" > /var/lib/tomcat7/conf/Catalina/localhost/idp.xml
-mv credentials.properties $INSTALLDIR/conf
+mv  /usr/share/shibboleth-identity-provider-3.3.2/credentials.properties $INSTALLDIR/conf
 
+cd /opt/shibboleth-idp
 echo -e "\nCreating self-signed certificate..."
 bin/keygen.sh --lifetime 3 \
 --certfile $INSTALLDIR/credentials/idp.crt \
 --keyfile $INSTALLDIR/credentials/idp.key \
 --hostname $SITENAME \
---uriAltName https://$SITENAME/idp/shibboleth
+--uriAltName https://$SITENAME:8443/idp/shibboleth
 echo ...done
 chmod 600 $INSTALLDIR/credentials/idp.key
 
-# set owner of key file and directories
-getent passwd tomcat7 >/dev/null && TCUSER=tomcat7 || TCUSER=tomcat
+
+getent passwd tomcat8 >/dev/null && TCUSER=tomcat8 || TCUSER=tomcat
 chown $TCUSER $INSTALLDIR/credentials/idp.key
 chown $TCUSER $INSTALLDIR/credentials/sealer.*
 chown $TCUSER $INSTALLDIR/metadata
@@ -155,5 +123,6 @@ chown $TCUSER $INSTALLDIR/conf/credentials.properties
 #allow access to public
 sed -i -e "s~'::1/128'~'::1/128', '0.0.0.0/0'~g" /opt/shibboleth-idp/conf/access-control.xml
 
-#restart tomcat
-service tomcat7 restart
+bin/build.sh -Didp.target.dir=/opt/shibboleth-idp
+
+service tomcat8 restart
